// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > renders the OpenWork logo and AI 알파 TF signature, no auth info 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.0.0
"
`;

exports[`<AppHeader /> > should not render the banner when no flags are set 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.0.0
"
`;

exports[`<AppHeader /> > should not render the default banner if shown count is 5 or more 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.0.0
"
`;

exports[`<AppHeader /> > should render the banner with default text 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.0.0

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<AppHeader /> > should render the banner with warning text 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.0.0

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ There are capacity issues                                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
